# vvctre

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DEFAULT_CONTROLS.txt  Doxyfile  README.md  RPC.md  TODO  readme.md  rpc.yml
.github/: FUNDING.yml
.github/workflows/: main.yml
CMakeModules/: CopyFFmpegDeps.cmake  CopySDLDeps.cmake  DownloadExternals.cmake
reference/: RPC.v1.yaml  RPC.yaml  rpc.yml
src/: .clang-format  CMakeLists.txt
src/audio_core/: CMakeLists.txt  cubeb_input.cpp  cubeb_sink.cpp  dsp_interface.cpp  dsp_interface.h  interpolate.cpp  sdl2_sink.cpp  sink.h  sink_details.cpp
src/audio_core/hle/: decoder.cpp  decoder.h  fdk_decoder.cpp  ffmpeg_dl.h  hle.cpp  source.cpp  wmf_decoder.cpp  wmf_decoder_utils.h
src/audio_core/lle/: lle.cpp
src/common/: CMakeLists.txt  bit_set.h  common_paths.h  common_types.h  detached_tasks.h  fastmem_mapper.cpp  fastmem_mapper.h  fastmem_mapper_generic.cpp  fastmem_mapper_posix.cpp  file_util.cpp  file_util.h  param_package.cpp  stb_image.cpp  stb_image_resize.cpp  stb_image_write.cpp  string_util.cpp  string_util.h  texture.cpp  texture.h  thread.cpp  thread.h  thread_pool.h  timer.cpp  timer.h  version.cpp  version.h
src/common/logging/: backend.cpp  backend.h  log.h  text_formatter.cpp
src/common/x64/: cpu_detect.cpp  cpu_detect.h  xbyak_abi.h
src/core/: CMakeLists.txt  core.cpp  core.h  core_timing.cpp  core_timing.h  custom_tex_cache.cpp  memory.cpp  memory.h  movie.cpp  movie.h  perf_stats.cpp  perf_stats.h  settings.cpp  settings.h
src/core/arm/dynarmic/: arm_dynarmic.cpp  arm_dynarmic.h
src/core/arm/dyncom/: arm_dyncom_dec.cpp  arm_dyncom_interpreter.cpp
src/core/cheats/: cheats.cpp  cheats.h  gateway_cheat.cpp
src/core/file_sys/: archive_backend.h  archive_extsavedata.cpp  archive_extsavedata.h  archive_ncch.cpp  archive_sdmc.cpp  archive_sdmcwriteonly.cpp  archive_systemsavedata.cpp  archive_systemsavedata.h  file_backend.h  layered_fs.cpp  layered_fs.h  ncch_container.cpp  ncch_container.h  savedata_archive.cpp
src/core/frontend/: emu_window.cpp  emu_window.h  framebuffer_layout.cpp  framebuffer_layout.h
src/core/frontend/applets/: default_applets.h  swkbd.cpp  swkbd.h
src/core/frontend/camera/: blank_camera.cpp  blank_camera.h  factory.cpp  factory.h  interface.h
src/core/gdbstub/: gdbstub.cpp
src/core/hle/: result.h
src/core/hle/applets/: applet.cpp  applet.h
src/core/hle/kernel/: kernel.cpp  kernel.h  memory.cpp  process.cpp  shared_page.cpp  shared_page.h  svc.cpp  thread.cpp  thread.h  vm_manager.cpp  vm_manager.h
src/core/hle/service/: err_f.cpp  http_c.cpp  http_c.h  mic_u.cpp  mic_u.h  service.cpp  service.h  soc_u.cpp  y2r_u.cpp  y2r_u.h
src/core/hle/service/ac/: ac.cpp  ac.h  ac_i.cpp
src/core/hle/service/am/: am.cpp  am.h
src/core/hle/service/apt/: applet_manager.cpp  applet_manager.h  apt.cpp  apt.h  apt_a.cpp  apt_s.cpp  apt_u.cpp  ns.h  ns_s.cpp
src/core/hle/service/boss/: boss.h
src/core/hle/service/cam/: cam.cpp  cam.h
src/core/hw/: gpu.cpp  gpu.h  hw.cpp  hw.h  lcd.cpp  lcd.h
src/core/hw/aes/: key.cpp  key.h
src/core/hw/rsa/: rsa.cpp
src/core/loader/: 3dsx.cpp  3dsx.h  elf.cpp  elf.h  loader.cpp  loader.h  ncch.cpp  ncch.h  smdh.cpp  smdh.h
src/core/rpc/: rpc_server.cpp  rpc_server.h  server.cpp  server.h
src/dedicated_room/: citra-room.rc
src/input_common/: CMakeLists.txt  analog_from_button.cpp  keyboard.cpp  main.cpp  main.h
src/input_common/sdl/: sdl.h  sdl_impl.cpp
src/input_common/udp/: client.cpp  client.h  protocol.h  udp.cpp  udp.h
src/network/: CMakeLists.txt  network.cpp  network.h  room_member.cpp  room_member.h
src/tests/: CMakeLists.txt  tests.cpp
src/tests/audio_core/: audio_fixures.h  decoder_tests.cpp
src/tests/core/: core_timing.cpp
src/tests/core/arm/: arm_test_common.cpp
src/tests/core/hle/kernel/: hle_ipc.cpp
src/tests/core/memory/: memory.cpp
src/video_core/: CMakeLists.txt  command_processor.cpp  generate_shaders.cmake  geometry_pipeline.cpp  pica.cpp  pica_state.h  primitive_assembly.cpp  primitive_assembly.h  rasterizer_interface.h  regs.h  renderer_base.cpp  renderer_base.h  vertex_loader.cpp  vertex_loader.h  video_core.cpp  video_core.h
src/video_core/debug_utils/: debug_utils.cpp  debug_utils.h
src/video_core/renderer_opengl/: gl_format_reinterpreter.cpp  gl_format_reinterpreter.h  gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_resource_manager.cpp  gl_resource_manager.h  gl_shader_decompiler.cpp  gl_shader_decompiler.h  gl_shader_disk_cache.cpp  gl_shader_disk_cache.h  gl_shader_gen.cpp  gl_shader_gen.h  gl_shader_manager.cpp  gl_shader_manager.h  gl_shader_util.cpp  gl_state.cpp  gl_state.h  gl_stream_buffer.cpp  gl_stream_buffer.h  gl_surface_params.h  pica_to_gl.h  post_processing_opengl.cpp  post_processing_opengl.h  renderer_opengl.cpp  renderer_opengl.h
src/video_core/renderer_opengl/texture_filters/: anime4k_ultrafast.cpp  anime4k_ultrafast.h  bicubic.cpp  bicubic.h  scale_force.cpp  tex_coord.h  tex_coord.vert  texture_filter_interface.h  texture_filter_manager.cpp  texture_filter_manager.h  texture_filterer.cpp  texture_filterer.h  xbrz_cpu.cpp  xbrz_cpu.h  xbrz_freescale.cpp  xbrz_freescale.h
src/video_core/shader/: shader.cpp  shader.h  shader_interpreter.cpp  shader_interpreter.h  shader_jit_x64.cpp  shader_jit_x64_compiler.cpp  shader_jit_x64_compiler.h
src/video_core/swrasterizer/: proctex.cpp  proctex.h  rasterizer.cpp
src/vvctre/: CMakeLists.txt  common.cpp  common.h  config.cpp  configuration.cpp  configuration.h  default_ini.h  discord_rp.cpp  discord_rp.h  function_logger.cpp  function_logger.h  initial_settings.cpp  initial_settings.h  lodepng_image_interface.cpp  plugin_functions.h  plugins.cpp  plugins.h  vvctre.cpp  vvctre.manifest  vvctre.rc
src/vvctre/applets/: appletEd.cpp  appletEd.h  keyboard.cpp  mii_selector.cpp  mii_selector.h  swkbd.cpp  swkbd.h
src/vvctre/camera/: image.cpp  image.h  util.cpp  util.h
src/vvctre/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
(+66 files in other folders)
