set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMakeModules)

add_executable(vvctre
    vvctre.cpp
    vvctre.rc
    common.cpp
    common.h
    emu_window/emu_window_sdl2.cpp
    emu_window/emu_window_sdl2.h
    resource.h
    applets/swkbd.cpp
    applets/swkbd.h
    applets/mii_selector.cpp
    applets/mii_selector.h
    camera/image.cpp
    camera/image.h
    camera/util.cpp
    camera/util.h
    function_logger.cpp
    function_logger.h
    initial_settings.cpp
    initial_settings.h
    plugins.cpp
    plugins.h
)

create_target_directory_groups(vvctre)

target_link_libraries(vvctre PRIVATE common core input_common audio_core network)
target_link_libraries(vvctre PRIVATE stb opengl-loader clip portable_file_dialogs imgui asl ${PLATFORM_LIBRARIES} Threads::Threads)

if (MSVC)
    include(CopySDLDeps)
    copy_SDL_deps(vvctre)
endif()
